# flow2

./: .gitignore  Pipfile  README.md  main.py  math.md  proto.dot  proto.ipynb  pulp_solver.py  pyproject.toml  sympy_solver.py  v1_utils.py
design/: structure.d2
research/: cli.py  research.md
research/common/: corpus.py  matrix.py  provenance.py
research/common/goldens/: 230_platline.json  cetane.json  jet_fuel.json  light_fuel.json  light_fuel_hydrogen_loop.json  microsheep.json  mk1.json  nanocircuits.json  palladium.json  palladium_line.json  testProjects__ab.json  testProjects__loopGraph.json  testProjects__sideLockedMultiInput.json  testProjects__simpleGraph.json  testProjects__undeterminedMultiInput.json  twoslack.json
research/q1_milp/: bench.py  bench_results.md  enumerate_optima.py  formulation_extent.py  lexicographic.py  solvers.py  test_lexicographic.py  test_phase2.py
research/q2_diagnostics/: iis.py  platline_case_study.md  platline_case_study.py  rank_nullity.py  test_diagnostics.py
research/q3_layout/: bench.py  interchange.py  metrics.py  render.py
research/q3_layout/engines/: clip.py  dot_engine.py  elk_engine.py  (+3 more)
src/core/: addUserLocking.py  connectGraph.py  flow1Compat.py  flow1_compat.py  flow2Syntax.py  graphToEquations.py  postProcessing.py  preProcessing.py  sharedYamlLoad.py
src/data/: basicTypes.py
temporaryFlowProjects/: 230_platline.yaml  cetane.yaml  jet_fuel.yaml  light_fuel_hydrogen_loop.yaml  microsheep.yaml  mk1.yaml  palladium.yaml  palladium_line.yaml
temporaryFlowProjects/testProjects/: ab.yaml  loopGraph.yaml
(+3 files in other folders)
